fix Navigation visibility while close

--- a/src/components/navigation/navigation.style.scss
+++ b/src/components/navigation/navigation.style.scss
@@ -63,6 +63,7 @@
   }
 
   &__link {
+    visibility: hidden;
     &:link,
     &:visited {
       display: inline-block;
@@ -102,6 +103,10 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+  }
+
+  &__checkbox:checked ~ &__nav &__link {
+    visibility: visible;
   }
 
   &__icon {
